fixed grid overflowing width issue by changing 30% for the middle column to 1f in the grid definition

--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,12 @@
 @media (min-width: 768px) {
   .grid {
   	text-align: center;
-	width: 96%;
+	width: 100%;
+	margin: auto;
 	margin-top: 40px;
     display: grid;
-    grid-template-columns: 40% 30% 30%;
-	grid-gap: 20px;
+    grid-template-columns: 40% 1fr 30%;
+	grid-gap:  20px;
   }
 }
 
@@ -35,7 +36,7 @@ img{
 	width: 100%;
 	height: 120px;
 	text-align: center;
-	padding: 1px 0;
+	padding: 0px 0;
 }
 
 #lesavoir{
@@ -62,8 +63,20 @@ img{
 	font-size: 24px;
 }
 
+.right-column{
+	background-color: rgb(240,240,240,1);
+	padding: 17px;
+}
+
 .right-column h1{
 	font-size: 18px;
+
+}
+
+
+.right-column img{
+	max-width: 100%;
+
 }
 
 .footer{
